--- a/skyfolk/templates/about/publication_detail.html
+++ b/skyfolk/templates/about/publication_detail.html
@@ -8,6 +8,10 @@
         .card-content {
             word-break: break-word;
         }
+        .emoji {
+          width: 20px;
+          height: 20px;
+        }
     </style>
 {% endblock %}
 
@@ -23,9 +27,9 @@
           <div class="card">
             <div class="card-content clearfix grey-text text-darken-2">
               <div class="row">
-                <h4 class="center grey-text text-darken-2"><a href="">{{ object.title|safe|emoji_replace }}</a></h4>
-                <p>
-                  <b class="center">{{ object.created }}</b>
+                <h4 class="grey-text text-darken-2"><a href="">{{ object.title|safe|emoji_replace }}</a></h4>
+                <p class="left">
+                  Por <a href="{% url 'user_profile:profile' object.author.username %}">@{{ object.author.username }}</a> a {{ object.created }}
                 </p>
               </div>
               <div class="divider"></div>
@@ -41,9 +45,6 @@
                 {% if objectimage %}
                     <img src="{{ object.image.url }}" width="300" height="300">
                 {% endif %}
-            </div>
-            <div class="card-action">
-              <a class="white-text blue btn" href="{% url 'user_profile:profile' object.author.username %}">@{{ object.author.username }}</a>
             </div>
           </div>
         </div>
