--- a/skyfolk/templates/about/publications.html
+++ b/skyfolk/templates/about/publications.html
@@ -28,6 +28,10 @@
             width: 100%;
             height: 100%;
         }
+        .emoji {
+          width: 20px;
+          height: 20px;
+        }
     </style>
     <script src="{% static "js/masonry.pkgd.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/imagesloaded.pkgd.min.js" %}" type="text/javascript"></script>
