--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -82,7 +82,9 @@
                                     {% if node.extra_content %}
                                         {% if node.extra_content.video %}
                                             {% video node.extra_content.video as my_video %}
+                                            <div class="videoWrapper">
                                             {% video my_video "100% x 100%" is_secure=True %}
+                                            </div>
                                             {% endvideo %}
                                         {% else %}
                                             {% comment %} Para publicaciones con URL {% endcomment %}
