--- a/photologue/templates/photologue/videos/publication_detail.html
+++ b/photologue/templates/photologue/videos/publication_detail.html
@@ -98,7 +98,9 @@
                                         {% comment %} Para publicaciones con URL {% endcomment %}
                                         {% if node.publication_video_extra_content.video %}
                                             {% video node.publication_video_extra_content.video as my_video %}
+                                                <div class="videoWrapper">
                                                {% video my_video "100% x 100%" is_secure=True %}
+                                               </div>
                                             {% endvideo %}
                                         {% else %}
                                         <div class="card small">
