--- a/photologue_groups/templates/photologue_groups/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/ajax_load_replies.html
@@ -77,7 +77,9 @@
                         {% if node.publication_group_multimedia_photo_extra_content %}
                         {% if node.publication_group_multimedia_photo_extra_content.video %}
                         {% video node.publication_group_multimedia_photo_extra_content.video as my_video %}
-                        {% video my_video "100% x 100%" is_secure=True is_secure=True %}
+                        <div class="videoWrapper">
+                            {% video my_video "100% x 100%" is_secure=True is_secure=True %}
+                        </div>
                         {% endvideo %}
                         {% else %}
                         {% comment %} Para publicaciones con URL {% endcomment %}
