--- a/photologue_groups/templates/photologue_groups/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/publication_detail.html
@@ -104,7 +104,9 @@
                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                             {% if node.publication_group_multimedia_photo_extra_content.video %}
                                                 {% video node.publication_group_multimedia_photo_extra_content.video as my_video %}
-                                                {% video my_video "100% x 100%" is_secure=True %}
+                                                <div class="videoWrapper">
+                                                    {% video my_video "100% x 100%" is_secure=True %}
+                                                </div>
                                                 {% endvideo %}
                                             {% else %}
                                                 <div class="card small">
