--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -162,7 +162,9 @@
                                         {% if item.extra_content %}
                                             {% if item.extra_content.video %}
                                                 {% video item.extra_content.video as my_video %}
+                                                <div class="videoWrapper">
                                                 {% video my_video "100% x 100%" is_secure=True %}
+                                                </div>
                                                 {% endvideo %}
                                             {% else %}
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
