--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -7,6 +7,7 @@
 {% load static %}
 {% load emoji_tags %}
 
+
 <div id="list-publications" class="infinite-container">
     {% for node in publications %}
         <div class="row infinite-item wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
@@ -75,9 +76,13 @@
                                         {% endwith %}
                                         {% if node.extra_content %}
                                             {% if node.extra_content.video %}
+                                            <div class="videoWrapper">
                                                 {% video node.extra_content.video as my_video %}
+                                                <div class="videoWrapper">
                                                 {% video my_video "100% x 100%" is_secure=True %}
+                                                </div>
                                                 {% endvideo %}
+                                            </div>
                                             {% else %}
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
                                                 <div class="card small">
