--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -131,7 +131,9 @@
                                         {% comment %} Para publicaciones con URL {% endcomment %}
                                         {% if node.extra_content.video %}
                                             {% video node.extra_content.video as my_video %}
+                                            <div class="videoWrapper">
                                                {% video my_video "100% x 100%" is_secure=True %}
+                                            </div>
                                             {% endvideo %}
                                         {% else %}
                                         <div class="card small">
