--- a/skyfolk/templates/account/shared_publication.html
+++ b/skyfolk/templates/account/shared_publication.html
@@ -74,7 +74,9 @@
         {% comment %} Para publicaciones con URL {% endcomment %}
         {% if  shared_publication.extra_content.video %}
         {% video shared_publication.extra_content.video as my_video %}
+        <div class="videoWrapper">
         {% video my_video "100% x 100%" is_secure=True %}
+        </div>
         {% endvideo %}
         {% else %}
         <div class="card small">
