--- a/skyfolk/templates/channels/new_feed_publication.html
+++ b/skyfolk/templates/channels/new_feed_publication.html
@@ -70,7 +70,9 @@
                                 {% comment %} Para publicaciones con URL {% endcomment %}
                                 {% if  item.shared_publication.extra_content.video %}
                                     {% video item.shared_publication.extra_content.video as my_video %}
+                                    <div class="videoWrapper">
                                     {% video my_video "100% x 100%" is_secure=True %}
+                                    </div>
                                     {% endvideo %}
                                 {% else %}
                                     <div class="card small">
@@ -129,7 +131,9 @@
             {% if item.extra_content %}
                 {% if item.extra_content.video %}
                     {% video item.extra_content.video as my_video %}
+                    <div class="videoWrapper">
                     {% video my_video "100% x 100%" is_secure=True %}
+                    </div>
                     {% endvideo %}
                 {% else %}
                     {% comment %} Para publicaciones con URL {% endcomment %}
