--- a/skyfolk/templates/channels/new_group_gallery_publication.html
+++ b/skyfolk/templates/channels/new_group_gallery_publication.html
@@ -71,7 +71,9 @@
                         {% if node.publication_group_multimedia_photo_extra_content %}
                         {% if node.publication_group_multimedia_photo_extra_content.video %}
                         {% video node.publication_group_multimedia_photo_extra_content.video as my_video %}
+                        <div class="videoWrapper">
                         {% video my_video "100% x 100%" is_secure=True %}
+                        </div>
                         {% endvideo %}
                         {% else %}
                         {% comment %} Para publicaciones con URL {% endcomment %}
