--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -70,7 +70,9 @@
                                         {% comment %} Para publicaciones con URL {% endcomment %}
                                         {% if node.publication_group_multimedia_photo_extra_content.video %}
                                             {% video node.publication_group_multimedia_photo_extra_content.video as my_video %}
+                                            <div class="videoWrapper">
                                                {% video my_video "100% x 100%" is_secure=True %}
+                                            </div>
                                             {% endvideo %}
                                         {% else %}
                                         <div class="card small">
