--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -75,7 +75,9 @@
                             {% comment %} Para publicaciones con URL {% endcomment %}
                             {% if pub.theme_extra_content.video %}
                                 {% video pub.theme_extra_content.video as my_video %}
+                                <div class="videoWrapper">
                                 {% video my_video "100% x 100%" is_secure=True %}
+                                </div>
                                 {% endvideo %}
                             {% else %}
                                 <div class="card small">
