--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -170,7 +170,9 @@ Template para las busquedas
                                         {% if item.extra_content %}
                                             {% if item.extra_content.video %}
                                                 {% video item.extra_content.video as my_video %}
+                                                <div class="videoWrapper">
                                                 {% video my_video "100% x 100%" is_secure=True %}
+                                                </div>
                                                 {% endvideo %}
                                             {% else %}
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
@@ -355,7 +357,9 @@ Template para las busquedas
                                     {% if item.extra_content %}
                                         {% if item.extra_content.video %}
                                             {% video item.extra_content.video as my_video %}
+                                            <div class="videoWrapper">
                                             {% video my_video "100% x 100%" is_secure=True %}
+                                            </div>
                                             {% endvideo %}
                                         {% else %}
                                             {% comment %} Para publicaciones con URL {% endcomment %}
