--- a/photologue_groups/templates/photologue_groups/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/publication_detail.html
@@ -52,7 +52,7 @@
                                                <br><br>
                                                 <div class="row z-depth-1-half">
                                                     <a
-                                                            href="{% url "publications_gallery_groups:publication_photo_detail" node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe }}</a>
+                                                            href="{% url "publications_gallery_groups:publication_photo_detail" node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe|linebreaks }}</a>
                                                 </div>
                                             {% endif %}
                                         </h2>
@@ -62,7 +62,7 @@
                                                         class="blue-text text-darken-2 pub-created">
                                                     {{ node.created|naturaltime }}{% if node.edition_date %}
                                                         <i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
-                                                <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
+                                                <div class="wrp-comment">{{ node.content|safe|emoji_replace|linebreaks }}</div>
                                             </div>
                                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                                 <a href="#">+ Mostrar más</a>
