--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -29,7 +29,7 @@
                                         <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
                                         <div class="row publication-content">
                                             <div class="parrafo comment">
-                                                <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
+                                                <div class="wrp-comment">{{ node.content|safe|emoji_replace|linebreaks }}</div>
                                             </div>
                                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                                 <a href="#">+ Mostrar más</a>
@@ -123,7 +123,7 @@
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 11px;">{{ node.content|inner_text_between_html_tags }}</textarea>
+                                                              style="height: 11px;">{{ node.content|inner_text_between_html_tags|linebreaks }}</textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
