--- a/skyfolk/templates/channels/new_publication_detail.html
+++ b/skyfolk/templates/channels/new_publication_detail.html
@@ -23,7 +23,7 @@
                             <br><br>
                             <div class="row z-depth-1-half">
                             <a
-                            href="/publication/{{ node.parent.id }}">@{{node.parent.author}}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe }}</a>
+                            href="/publication/{{ node.parent.id }}">@{{node.parent.author}}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe|linebreaks }}</a>
                             </div>
                         {% endif %}
                     </h2>
@@ -31,7 +31,7 @@
                         <div class="parrafo comment">
                             <p
                             class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
-                            <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
+                            <div class="wrp-comment">{{ node.content|safe|emoji_replace|linebreaks }}</div>
                         </div>
                         <div class="show-more" id="show-comment-{{ node.pk }}">
                             <a href="#">+ Mostrar más</a>
@@ -45,7 +45,7 @@
                             <span class="card-title"><a
                                 href="{% url 'user_profile:profile' node.shared_publication.author %}">@{{ node.shared_publication.author }}</a>
                                 <i class="blue-text text-darken-2"> {{ node.shared_publication.created|naturaltime }}</i></span>
-                                <p>{{ node.shared_publication.content|safe|emoji_replace }}</p>
+                                <p>{{ node.shared_publication.content|safe|emoji_replace|linebreaks }}</p>
                                 {% with node.shared_publication.images.all as images %}
                                 {% if images %}<br>
                                 <div class="row">
@@ -181,7 +181,7 @@
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 11px;">{{ node.content|inner_text_between_html_tags }}</textarea>
+                                                              style="height: 11px;">{{ node.content|inner_text_between_html_tags|linebreaks }}</textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
