--- a/skyfolk/templates/channels/new_video_publication_detail.html
+++ b/skyfolk/templates/channels/new_video_publication_detail.html
@@ -25,7 +25,7 @@
                                 <br><br>
                                 <div class="row z-depth-1-half">
                            <a
-                                   href="{% url "publications_gallery:publication_video_detail" publication_id=node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe }}</a>
+                                   href="{% url "publications_gallery:publication_video_detail" publication_id=node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe|linebreaks }}</a>
                         </div>
                             {% endif %}
                         </h2>
@@ -33,7 +33,7 @@
                             <div class="parrafo comment">
                                 <p
                                         class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
-                                <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
+                                <div class="wrp-comment">{{ node.content|safe|emoji_replace|linebreaks }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                 <a href="#">+ Mostrar más</a>
@@ -115,7 +115,7 @@
                                                       placeholder="Escribe el contenido del nuevo mensaje"
                                                       id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                       name="content" rows="10" required="required"
-                                                      style="height: 10.9969px;">{{ node.content|inner_text_between_html_tags }}</textarea>
+                                                      style="height: 10.9969px;">{{ node.content|inner_text_between_html_tags|linebreaks }}</textarea>
                                             <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                         </div>
                                         <div class="row">
