--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -140,7 +140,7 @@ Template para las busquedas
                                         <p><i class="pub-date">{{ item.created|naturaltime }}</i></p>
                                     </div>
                                     <div class="row" style="word-wrap: break-word;">
-                                        <p>{{ item.content|safe|emoji_replace|truncatechars_html:"150"|safe }}</p>
+                                        <p>{{ item.content|safe|emoji_replace|truncatechars_html:"150"|safe|linebreaks }}</p>
                                         {% with item.shared_publication as shared_publication %}
                                             {% include "account/shared_publication.html" %}
                                         {% endwith %}
@@ -326,7 +326,7 @@ Template para las busquedas
                                     <p><i class="pub-date">{{ item.created|naturaltime }}</i></p>
                                 </div>
                                 <div class="row" style="word-wrap: break-word;">
-                                    <p>{{ item.content|safe|emoji_replace|truncatechars_html:"150"|safe }}</p>
+                                    <p>{{ item.content|safe|emoji_replace|truncatechars_html:"150"|safe|linebreaks }}</p>
                                     <br>
                                     {% with item.shared_publication as shared_publication %}
                                         {% include "account/shared_publication.html" %}
