--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -167,10 +167,12 @@
     </div>
         <script src="{% static "js/photo_gallery.js" %}" type="text/javascript"></script>
         <script src="{% static "js/photo_detail.js" %}" type="text/javascript"></script>
+    {% if user.is_authenticated %}
         <script src="{% static "js/socket_photo.js" %}"></script>
         <script src="{% static "js/reconnecting-websocket.min.js" %}"></script>
     <script>
         UTILS.init([{{ user.pk }}]);
         UTILS.conn_socket();
     </script>
+    {% endif %}
 {% endblock %}
