--- a/photologue/templates/photologue/videos/video_detail.html
+++ b/photologue/templates/photologue/videos/video_detail.html
@@ -155,6 +155,7 @@
 
         <script src="{% static "js/photo_gallery.js" %}" type="text/javascript"></script>
         <script src="{% static "js/video_detail.js" %}" type="text/javascript"></script>
+    {% if user.is_authenticated %}
         <script src="{% static "js/socket_photo.js" %}"></script>
         <script src="{% static "js/reconnecting-websocket.min.js" %}"></script>
 
@@ -162,4 +163,5 @@
         UTILS.init([{{ user.pk }}]);
         UTILS.conn_socket();
     </script>
+    {% endif %}
 {% endblock %}
