--- a/photologue_groups/templates/photologue_groups/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/publication_detail.html
@@ -20,6 +20,7 @@
             <div class="col l3 offset-l5 offset-s3 s6 z-depth-1 board-photo">
                 <div class="col l3 s6 board-photo-container">
                     <img src="
+
                             {% if object.thumbnail %}{{ object.thumbnail.url }}{% elif object.image %}{{ object.image.url }}{% else %}{{ object.url_image }}{% endif %}">
                 </div>
                 <div class="col l9 s6 board-photo-link">
@@ -49,7 +50,7 @@
                                         <h2 class="author-header"><a
                                                 href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                                             {% if node.parent %}
-                                               <br><br>
+                                                <br><br>
                                                 <div class="row z-depth-1-half">
                                                     <a
                                                             href="{% url "publications_gallery_groups:publication_photo_detail" node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe|linebreaks }}</a>
@@ -61,7 +62,8 @@
                                                 <p
                                                         class="blue-text text-darken-2 pub-created">
                                                     {{ node.created|naturaltime }}{% if node.edition_date %}
-                                                        <i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
+                                                        <i> - Editado
+                                                            ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
                                                 <div class="wrp-comment">{{ node.content|safe|emoji_replace|linebreaks }}</div>
                                             </div>
                                             <div class="show-more" id="show-comment-{{ node.pk }}">
@@ -106,12 +108,13 @@
                                                 {% video node.publication_group_multimedia_photo_extra_content.video as my_video %}
                                                 <div class="videoWrapper">
                                                     {% video my_video "100% x 100%" is_secure=True %}
-                                                </div>
-                                                {% endvideo %}
+                                                        </div>
+                                                    {% endvideo %}
                                             {% else %}
                                                 <div class="card small">
                                                     <div class="card-image">
                                                         <img class="lazyload" data-src="
+
 
                                                                 {% if node.publication_group_multimedia_photo_extra_content.image %}{{ node.publication_group_multimedia_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                         <span class="card-title white-text">{{ node.publication_group_multimedia_photo_extra_content.title }}</span>
@@ -183,10 +186,14 @@
         </div>
     </div>
     <script src="{% static "js/photo_group_detail.js" %}" type="text/javascript"></script>
-    <script src="{% static "js/socket_photo_publication.js" %}"></script>
+    {% if user.is_authenticated %}
+        <script src="{% static "js/socket_photo_publication.js" %}"></script>
+        <script>
+            UTILS.init([{{ user.pk }}]);
+            UTILS.conn_socket();
+        </script>
+    {% endif %}
     <script>
-        UTILS.init([{{ user.pk }}]);
-        UTILS.conn_socket();
         var infinite = new Waypoint.Infinite({
             element: $('.infinite-container')[0],
             offset: 'bottom-in-view',
