--- a/photologue_groups/templates/photologue_groups/videos/video_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/video_detail.html
@@ -192,6 +192,7 @@
 
         <script src="{% static "js/photo_group_gallery.js" %}" type="text/javascript"></script>
         <script src="{% static "js/video_group_detail.js" %}" type="text/javascript"></script>
+    {% if user.is_authenticated %}
         <script src="{% static "js/socket_photo.js" %}"></script>
         <script src="{% static "js/reconnecting-websocket.min.js" %}"></script>
 
@@ -199,4 +200,5 @@
         UTILS.init([{{ user.pk }}]);
         UTILS.conn_socket();
     </script>
+    {% endif %}
 {% endblock %}
