--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -208,10 +208,14 @@
     </div>
     </div>
     <script src="{% static "js/publication_detail.js" %}" type="text/javascript"></script>
+    {% if user.is_authenticated %}
     <script src="{% static "js/socket_publication.js" %}"></script>
     <script>
     UTILS.init([{{ user.pk }}]);
     UTILS.conn_socket();
+    </script>
+    {% endif %}
+    <script>
     var infinite = new Waypoint.Infinite({
     element: $('.infinite-container')[0],
     offset: 'bottom-in-view',
