--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -140,6 +140,7 @@
                                     <span class="no-comments-text-info">¡{{ user_profile.username }} no tiene comentarios!</span>
                                 </div>
                             {% endif %}
+                            {% if user.is_authenticated %}
                             <div class="row form-wrapper">
                                 <form id="message-photo-form" action="" method="post">{% csrf_token %}
                                     {{ publication_photo.csrftoken }}
@@ -159,6 +160,7 @@
                                         Enviar<i class="material-icons right">send</i></button>
                                 </form>
                             </div>
+                        {% endif %}
                         </div>
                     </div>
                 </div>
