--- a/skyfolk/templates/publications_base/publication_options.html
+++ b/skyfolk/templates/publications_base/publication_options.html
@@ -36,4 +36,12 @@
                 </li>
             {% endif %}
     </ul>
+    {% else %}
+    <div class="options_comentarios">
+        <ul class="opciones">
+            <li id="check-{{ node.pk }}" class="zoom-pub" title="Ver conversación completa">
+                <i class="material-icons md-18">open_in_new</i>
+            </li>
+        </ul>
+    </div>
 {% endif %}
