--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -16,12 +16,16 @@ Base para el head de la pagina (menu horizontal con busqueda etc...)
                 <a data-activates="notification-menu" class="right button-right-notify btn-flat"><i
                         class="material-icons">notifications</i><span
                         id="live_notify_badge"><b>{{ total_notifications }}</b></span></a>
+                <div class="right field hide-on-med-and-down" id="searchform">
+                    <form class="autocomplete-me" method='get' action="{% url 'user_profile:general-search' %}">
+                        {{ searchForm }}
+                    </form>
+                </div>
             {% endif %}
-            <div class="right field hide-on-med-and-down" id="searchform">
-                <form class="autocomplete-me" method='get' action="{% url 'user_profile:general-search' %}">
-                    {{ searchForm }}
-                </form>
-            </div>
+            {% if not user.is_authenticated %}
+                <a class="black-text hide-on-med-and-down right" style="margin-right: 10px"
+                   href="{% url "account_login" %}"><b>¿Tienes cuenta? Inicia sesión</b></a>
+            {% endif %}
         </div>
     </nav>
     {% if user.is_authenticated %}
