--- a/skyfolk/templates/account/account_inactive.html
+++ b/skyfolk/templates/account/account_inactive.html
@@ -21,7 +21,7 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper white z-depth-1">
-                    <a title="Inicio" href="/inicio" class="brand-logo center logotipo_skyfolk"><span>S</span>kyfolk</a>
+                    <a title="Inicio" href="/salad" class="brand-logo center logotipo_skyfolk"><span>S</span>kyfolk</a>
                     {% block base-title %}
 
                     {% endblock %}
