--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -47,6 +47,7 @@ Base para la interfaz en comun de todos los usuarios.
     <script src="{% static "js/jquery-3.1.0.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/jquery-migrate-1.4.1.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/jquery-ui.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/intercooler-1.2.1.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/lazysizes.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/jquery.waypoints.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/infinite.min.js" %}" type="text/javascript"></script>
