--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -88,8 +88,7 @@ Base para la interfaz en comun de todos los usuarios.
                 <div class="row">
                     <div class="row">
                         <div class="input-field col s12">
-                            <textarea class="materialize-textarea" cols="40" data-length="500" id="message2"
-                            maxlength="500" name="content" placeholder="Escribe tu mensaje aqui..."
+                            <textarea class="materialize-textarea" cols="40" id="message2" name="content" placeholder="Escribe tu mensaje aqui..."
                             rows="10" required=""></textarea>
                             <label for="message2">Escribe tu mensaje</label>
                         </div>
