--- a/skyfolk/templates/account/new_reply.html
+++ b/skyfolk/templates/account/new_reply.html
@@ -11,7 +11,7 @@ Nueva respuesta a una publicacion
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea class="materialize-textarea message-reply" id="message-reply-{{ node.pk }}" cols="40"
-                                  maxlength="500" name="content"
+                                  name="content"
                                   placeholder="Responder a @{{ node.author }}" rows="10" required=""></textarea>
                         <label for="message-reply-{{ node.pk }}">Escribe tu mensaje aqui...</label>
                     </div>
