--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -20,8 +20,8 @@
                 <div class="row">
                     <div class="row">
                         <div class="input-field col s12">
-                        <textarea class="materialize-textarea" cols="40" data-length="500" id="group_publication_form"
-                                  maxlength="500" name="content" placeholder="Escribe tu mensaje aqui..."
+                        <textarea class="materialize-textarea" cols="40" id="group_publication_form"
+                                  name="content" placeholder="Escribe tu mensaje aqui..."
                                   rows="10" required=""></textarea>
                             <label for="message3">Escribe tu mensaje</label>
                         </div>
