--- a/photologue/templates/photologue/videos/video_detail.html
+++ b/photologue/templates/photologue/videos/video_detail.html
@@ -4,9 +4,17 @@
 {% load i18n %}
 {% load humanize %}
 {% load static %}
+
+{% url "photologue:pl-video" username=object.owner.username slug=object.slug as photo_video %}
+
 {% block title %}{{ object.name }} por: {{ object.owner }}{% endblock %}
 
 {% block include_files %}
+    <meta property="og:title" content="{{ object.title }}">
+    <meta property="og:description" content="{% if object.caption %}{{ object.caption }}{% else %}{{ object.title }}{% endif %}">
+    <meta property="og:image" content="{{ object.thumbnail.url|absolute_media_uri:request }}">
+    <meta property="og:url" content="{{ photo_video|absolute_media_uri:request }}">
+
     <link rel="stylesheet" href="{% static "css/gallery.css" %}">
     <link rel="stylesheet" href="{% static "css/photo_detail.css" %}">
     <link rel="stylesheet" href="{% static "css/comentarios.css" %}">
@@ -102,10 +110,7 @@
                             {% endif %}
                             {% if next %}
                                 <a href="{{ next.get_absolute_url }}">
-                                    <img title="{{ next }}" class="responsive-img lazyload" data-src="
-
-
-                                            {% if next.thumbnail %}{{ next.thumbnail.url }}{% elif next.image %}{{ next.image.url }}{% else %}{{ next.url_image }}{% endif %}">
+                                    <img title="{{ next }}" class="responsive-img lazyload" data-src="{% if next.thumbnail %}{{ next.thumbnail.url }}{% elif next.image %}{{ next.image.url }}{% else %}{{ next.url_image }}{% endif %}">
                                 </a>
                             {% endif %}
                         </div>
