--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -26,8 +26,8 @@
                             {% if pub.parent %}
                                 <div class="divider"></div>
                                             <div class="row z-depth-1-half">
-                                                {% avatar pub.parent.author 40 %}
-                                                <a href="/publication/{{ pub.parent.id }}">@{{ pub.parent.author }}: {{ pub.parent.content|safe|emoji_replace|truncatewords_html:10|safe|linebreaks }}</a>
+                                                <span>{% avatar pub.parent.author 40 %} @{{ pub.parent.author }}:</span>
+                                                <p>{{ pub.parent.content|safe|emoji_replace|truncatewords_html:10|safe|linebreaks }}</p>
                                             </div>
                             {% endif %}
                         </h2>
@@ -82,10 +82,7 @@
                             {% else %}
                                 <div class="card small">
                                     <div class="card-image">
-                                        <img class="lazyload" data-src="
-
-
-                                                {% if pub.theme_extra_content.image %}{{ pub.theme_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
+                                        <img class="lazyload" data-src="{% if pub.theme_extra_content.image %}{{ pub.theme_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                         <span class="card-title white-text">{{ pub.theme_extra_content.title }}</span>
                                     </div>
                                     <div class="card-content">
@@ -105,7 +102,7 @@
                     <div class="options_comentarios col s12">
                         <ul class="opciones">
                             {% if user.id == pub.author.id or user.id == group_owner_id or user.id == pub.board_theme.owner.id %}
-                                <li class="message-settings dropdown-button" data-activates='dropdown-{{ pub.pk }}'>
+                                <li class="message-settings dropdown-button" data-activates="dropdown-comment-{{ pub.pk }}">
                                     <i class="material-icons">more_horiz</i>
                                 </li>
                             {% endif %}
@@ -114,7 +111,7 @@
                                 <i class="material-icons md-18">reply</i>
                             </li>
                         </ul>
-                        <ul id="dropdown-{{ pub.pk }}" class="dropdown-content" style="z-index: 9999">
+                        <ul id="dropdown-comment-{{ pub.pk }}" class="dropdown-content" style="z-index: 9999">
                             {% if user.id == pub.author.id %}
                                 <li data-id="{{ pub.pk }}"
                                     class="edit-comment center"><span>Editar</span></li>
@@ -138,9 +135,9 @@
                                             <i class="material-icons prefix">create</i>
                                             <textarea class="materialize-textarea"
                                                       placeholder="Escribe el contenido del nuevo mensaje"
-                                                      id="id_caption-{{ pub.pk }}" cols="40" maxlength="500"
+                                                      id="id_caption-{{ pub.pk }}" cols="40"
                                                       name="content" rows="10" required="required"
-                                                      style="height: 11px;">{{ pub.content|inner_text_between_html_tags|linebreaks }}</textarea>
+                                                      style="height: 11px;">{{ pub.content|inner_text_between_html_tags }}</textarea>
                                             <label for="id_caption-{{ pub.pk }}">Editar comentario</label>
                                         </div>
                                         <div class="row">
