--- a/skyfolk/templates/groups/new_reply_theme.html
+++ b/skyfolk/templates/groups/new_reply_theme.html
@@ -9,7 +9,7 @@ Nueva respuesta a una publicacion
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea class="materialize-textarea message-reply" id="message-reply-{{ object.pk }}" cols="40"
-                                  maxlength="500" name="content"
+                                  name="content"
                                   placeholder="Responder a @{{ object.owner }}" rows="10" required=""></textarea>
                         <label for="message-reply-{{ object.owner }}">Escribe tu mensaje aqui...</label>
                     </div>
