Updated meta description and keywords

--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -7,8 +7,8 @@ Base para la interfaz en comun de todos los usuarios.
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Skyfolk - Social network">
-    <meta name="keywords" content="Skyfolk, Social Network, Red Social, Mensajes, Amigos, Seguidores, Comentarios">
+    <meta name="description" content="Skyfolk is a modern social network aim to help the user handle all other social networks. A social network of social networks">
+    <meta name="keywords" content="Skyfolk, Social Network, Network of networks, pin, disruptive, emerging, technology, chyperpunk, cyberpunk, underground">
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <meta content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="{% static "dist/css/bundle.min.css" %}">
