--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -9,8 +9,10 @@
     <!-- Hojas de estilo SASS -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="Skyfolk is a modern social network aim to help the user handle all other social networks. A social network of social networks">
+    <meta name="keywords" content="Skyfolk, Social Network, Network of networks, pin, disruptive, emerging, technology, chyperpunk, cyberpunk, underground">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>¡Bienvenido a Skyfolk! - Iniciar sesión</title>
+    <title>Skyfolk // Donde todo está conectado. </title>
     <meta name="keywords" content="skyfolk, social, login, registro, sky, folk, red social, red">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{% static "img/apple-touch-icon-57x57.png" %}"/>
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "img/apple-touch-icon-114x114.png" %}"/>
